加入荣誉奖项

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Teaching"
+title: "My hobbies and interests outside of academia"
 permalink: /teaching/
 author_profile: true
 ---
